Added more method to create and retrieve by id